--- a/templates/list.html
+++ b/templates/list.html
@@ -12,9 +12,9 @@
   {% for item in object_list %}
   <div class="alert alert-{{item.priority}}" role="alert">
     <p>{{item.title}}</p>
-    <a href="#" class="btn btn-info" tabindex="-1" role="button" aria-disabled="true">編集</a>
-    <a href="#" class="btn btn-danger" tabindex="-1" role="button" aria-disabled="true">削除</a>
-    <a href="#" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">詳細</a>
+    <a href="{% url 'update' item.pk %}" class="btn btn-info" tabindex="-1" role="button" aria-disabled="true">編集</a>
+    <a href="{% url 'delete' item.pk %}" class="btn btn-danger" tabindex="-1" role="button" aria-disabled="true">削除</a>
+    <a href="{% url 'detail' item.pk %}" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">詳細</a>
   </div>
   <!-- 詳細は詳細ページで表示 -->
   <!-- <div class="alert alert-success" role="alert">
